# mokapot

./: .gitlab-ci.yml  CHANGELOG.md  README.md  README_confidence_algos.md  README_max_open_files.md  pyproject.toml  setup.cfg
.github/workflows/: docker.yml  publish.yml  tests.yml
data/: decoys.psms
mokapot/: __init__.py  brew.py  brew_rollup.py  confidence.py  config.py  constants.py  dataset.py  model.py  mokapot.py  parsers.py  qvalues.py  rollup.py  tabular_data.py  utils.py
mokapot/parsers/: pin.py
mokapot/stats/: algorithms.py  config.py  histdata.py  monotonize.py  peps.py  pi0est.py  pvalues.py  qvalues.py  qvalues_storey.py  statistics.py  tdmodel.py  utils.py
mokapot/tabular_data/: streaming.py
tests/: conftest.py  test_dataset.py
tests/integration_tests/: make_test_data.R  test.sh  test1.tab  test2.tab
tests/system_tests/: test_aggregatePsmsToPeptide.py  test_brew_rollup.py  test_cli.py  test_rollup.py
tests/unit_tests/: test_confidence.py  test_qvalues_storey.py  test_tabular_data.py
tests/unit_tests/stats/: helpers.py  test_algorithms.py  test_histdata.py  test_monotonize.py  test_peps.py  test_pi0est.py  test_pvalues.py  test_qvalues.py  test_qvalues_storey.py  test_statistics.py  test_tdmodel.py
