[tool.poetry]
name = "mokapot"
version = "1.0.10"
description = "Fast and flexible semi-supervised learning for peptide detection"
authors = ["William E. Fondrie <fondriew@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
numpy = "1.21.5"
pandas = "1.3.3"
sklearn = "0.0"
numba = ">=0.48.0"
triqler = ">=0.6.2"
matplotlib = ">=3.1.3"
joblib = ">=1.1.0"
lxml = "4.6.5"
pip-licenses = "3.5.3"

[tool.poetry.dev-dependencies]
black = ">=18.3-alpha.0"
pre-commit = ">=2.9.3"


[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
