[project]
name = "msaid-de.mokapot"

authors = [
    {name = "William E. Fondrie", email = "fondriew@gmail.com"},
    {name = "Samia Ben Fredj", email = "samia.ben.fredj@msaid.de"},
    {name = "Elmar Zander", email = "elmar.zander@msaid.de"},
    {name = "Vishal Sukumar", email = "vishal.sukumar@msaid.de"},
    {name = "Siegfried Gessulat", email = "siegfried.gessulat@msaid.de"},
]
description = "Fast and flexible semi-supervised learning for peptide detection"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.18.1",
    "pandas>=1.0.3",
    "scikit-learn>=0.22.1",
    "numba>=0.48.0",
    "matplotlib>=3.1.3",
    "lxml>=4.6.2",
    "triqler>=0.6.2",
    "joblib>=1.1.0",
    "importlib-metadata>=5.1.0",
    "typeguard>=4.1.5",
    "pyarrow>=15.0.0",
    "scipy>=1.13.0",
    "filelock>=3.16.1",
]
dynamic = ["version"]


[tool.uv]
dev-dependencies = [
    "pre-commit>=2.7.1",
    "ruff>=0.4.4",
    "pytest>=8.2.2",
    "flake8>=7.1.1",
    "wheel>=0.44.0",
    "pytest-cov>=5.0.0"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.optional-dependencies]
docs = [
    "numpydoc>=1.0.0",
    "sphinx-argparse>=0.2.5",
    "sphinx-rtd-theme>=0.5.0",
    "nbsphinx>=0.7.1",
    "ipykernel>=5.3.0",
    "recommonmark>=0.5.0",
]

[project.scripts]
mokapot = "mokapot.mokapot:main"

[tool.pytest.ini_options]
testpaths = ["tests",]
norecursedirs = ["extra", ]

[tool.ruff]
extend-exclude = ["docs/source/conf.py"]
target-version = "py39"
exclude = ["docs", "notebooks", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "T20"]  # T20 is for print() statements.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_parser_pepxml.py" = ["E501"]

[tool.ruff.format]
docstring-code-format = true
preview = true
